--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BDGUIA2
 excludes=
+file.reference.ojdbc11.jar=..\\..\\..\\Downloads\\ojdbc11.jar
 file.reference.ojdbc8.jar=C:\\Users\\Usuario\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.ojdbc11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
