--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,9 @@ dist.jlink.output=${dist.jlink.dir}/BDGUIA2
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\Users\\Usuario\\Downloads\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
+file.reference.javax.mail.jar=..\\..\\..\\Downloads\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Emerson\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\..\\Downloads\\jcalendar-1.4.jar
 file.reference.ojdbc11.jar=..\\..\\..\\Downloads\\ojdbc11.jar
 file.reference.mail.jar=C:\\Users\\Usuario\\Downloads\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.ojdbc8.jar=C:\\Users\\Usuario\\Downloads\\ojdbc8.jar
@@ -49,7 +51,10 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.ojdbc8.jar-1}:\
     ${file.reference.activation.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
     ${file.reference.ojdbc11.jar}
     ${file.reference.mail.jar}
 # Space-separated list of extra javac options
