--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,2 @@
+file.reference.ojdbc8.jar=C:\\Users\\Emerson\\Downloads\\ojdbc8.jar
 user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\16\\build.properties
