--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BDGUIA2
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Emerson\\Downloads\\jcalendar-1.4.jar
 file.reference.ojdbc8.jar=C:\\Users\\Usuario\\Downloads\\ojdbc8.jar
+file.reference.ojdbc8.jar-1=C:\\Users\\Emerson\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.ojdbc8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
