--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BDGUIA2
+application.vendor=Lenin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/BDGUIA2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BDGUIA2
+endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\Usuario\\Downloads\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Emerson\\Downloads\\jcalendar-1.4.jar
 file.reference.ojdbc11.jar=..\\..\\..\\Downloads\\ojdbc11.jar
 file.reference.mail.jar=C:\\Users\\Usuario\\Downloads\\javamail1_4_7\\javamail-1.4.7\\mail.jar
@@ -44,7 +47,9 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.ojdbc8.jar-1}
+    ${file.reference.ojdbc8.jar-1}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
     ${file.reference.ojdbc11.jar}
     ${file.reference.mail.jar}
 # Space-separated list of extra javac options
