--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,13 @@
-file.reference.ojdbc8.jar=C:\\Users\\Emerson\\Downloads\\ojdbc8.jar
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.activation.jar=C:\\Users\\santi\\Documents\\GitHub\\BDGUIA2\\lib\\activation.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\santi\\Documents\\GitHub\\BDGUIA2\\lib\\jcalendar-1.4.jar
+file.reference.mail.jar=C:\\Users\\santi\\Documents\\GitHub\\BDGUIA2\\lib\\javax.mail.jar
+file.reference.ojdbc8.jar=C:\\Users\\santi\\Documents\\GitHub\\BDGUIA2\\lib\\ojdbc8.jar
+file.reference.ojdbc8.jar-1=C:\\Users\\santi\\Documents\\GitHub\\BDGUIA2\\lib\\ojdbc8.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\16\\build.properties
